--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,5 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
+lib_deps = sparkfun/SparkFun u-blox Arduino Library@^1.8.10
+monitor_speed = 115200
