Upload port changed

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ board = featheresp32
 framework = arduino
 lib_deps = sparkfun/SparkFun u-blox Arduino Library@^1.8.10
 monitor_speed = 115200
+upload_port = COM3
